devhub-tools/main/default/objects/DocGen_Community_Reply__c/DocGen_Community_Reply__c.object-meta.xml
<CustomObject>
    <description>Reply to a community forum post.</description>
    <label>Community Reply</label>
    <nameField>
        <displayFormat>RPL-{00000}</displayFormat>
        <label>Reply Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Replies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>