devhub-tools/main/default/objects/DocGen_Community_Reply__c/fields/Author_Id__c.field-meta.xml
<CustomField>
    <fullName>Author_Id__c</fullName>
    <description>Denormalized Contact ID for guest user profile links. Set on reply creation.</description>
    <label>Author Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>