devhub-tools/main/default/objects/DocGen_Community_Reply__c/fields/Is_Solution__c.field-meta.xml
<CustomField>
    <fullName>Is_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Solution</label>
    <type>Checkbox</type>
</CustomField>