devhub-tools/main/default/objects/DocGen_Community_Reply__c/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <label>Post</label>
    <referenceTo>DocGen_Community_Post__c</referenceTo>
    <relationshipLabel>Replies</relationshipLabel>
    <relationshipName>Replies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>