devhub-tools/main/default/objects/DocGen_Community_Reply__c/fields/Upvote_Count__c.field-meta.xml
<CustomField>
    <fullName>Upvote_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Upvotes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>